fixed spacing issues

--- a/components/Home/Faq/styles.module.scss
+++ b/components/Home/Faq/styles.module.scss
@@ -1,6 +1,5 @@
 .faq {
     position: relative;
-    min-height: 200vh;
     .faqContainer {
         display: flex;
         flex-direction: column;
